fix: footer UI misalignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@
   /**
    * typography
    */
-  
+
 
   --ff-oswald: 'Oswald', sans-serif;
   --ff-inter: 'Inter', sans-serif;
@@ -1390,6 +1390,25 @@ body {
   max-width: 350px;
 }
 
+.footer-right {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 1rem;
+}
+
+.footer-right form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  width: 100%;
+}
+
+.footer-right form button {
+  margin: 0;
+}
+
 .footer-logo {
   font-size: 2.5rem;
   font-weight: var(--fw-700);
@@ -1510,7 +1529,16 @@ body {
 .footer-right h4 {
   color: #98c379;
   font-size: 1.6rem;
+}
+
+.footer-middle h4 {
   margin-bottom: 10px;
+}
+
+.footer-right h4 {
+  width: 100%;
+  text-align: center;
+  margin-top: 10px;
 }
 
 .footer-middle ul {
@@ -1558,9 +1586,10 @@ body {
 }
 
 .footer-social-icons {
-  margin-top: 20px;
+  width: 100%;
+  margin-top: 10px;
   display: flex; /* Aligns icons horizontally */
-  justify-content: flex-start;
+  justify-content: center;
   gap: 15px; /* Space between icons */
 }
 
@@ -1640,15 +1669,17 @@ body {
   flex-direction: column;
 }
 
-.footer-right {
-  text-align: right;
-}
-
 /* Responsive adjustments */
 @media (max-width: 768px) {
   .footer-container {
     flex-direction: column;
     text-align: center;
+  }
+
+  .footer-left,
+  .footer-middle,
+  .footer-right {
+    width: 100%;
   }
 
   .footer-right form {
@@ -1679,7 +1710,7 @@ body {
 
   .footer-right input,
   .footer-right button {
-    width: 100%;
+    width: fit-content;
   }
 
   .footer-bottom {
